--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div></div>
                     <h2 class="text-white section-heading">プロフィール</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4" style="text-align: left;">早稲田大学高等学院卒業、同大基幹理工学部情報理工学科所属。特定非営利活動法人Willen創設者、初代・2代目理事長を歴任。トビタテ！留学JAPAN 日本代表プログラム 高校生 プロフェッショナルコース（未来テクノロジー枠）にて日本代表、Japan Society Junior Fellow Leadership Program、友好都市派遣生、高校短期留学生として海外派遣され活動する。（エストニア、ドイツ、フランス、オーストラリア）このほか、優秀論文作品賞受賞（所属高校卒業研究）、税の作文 市優秀賞を受賞している。</p><a class="btn btn-light btn-xl" role="button" href="#services">スキル</a>
+                    <p class="text-faded mb-4" style="text-align: left;">早稲田大学高等学院卒業、同大基幹理工学部情報理工学科所属。特定非営利活動法人Willen創設者、初代・2代目理事長を歴任。トビタテ！留学JAPAN 日本代表プログラム 高校生 プロフェッショナルコース（未来テクノロジー枠）にて日本代表、Japan Society Junior Fellow Leadership Program、友好都市派遣生、高校短期留学生として海外派遣され活動する。（エストニア、ドイツ、オーストリア、オーストラリア）このほか、優秀論文作品賞受賞（所属高校卒業研究）、税の作文 市優秀賞を受賞している。</p><a class="btn btn-light btn-xl" role="button" href="#services">スキル</a>
                     <div></div>
                 </div>
             </div>
@@ -176,12 +176,12 @@
                 <div class="col-xxl-5">
                     <div>
                         <div class="py-4">
-                            <h4>情報処理学会</h4>
-                            <p>ジュニア会員として所属しております。</p>
+                            <h4>情報研究者として</h4>
+                            <p>基幹理工学部情報理工学科所属、情報処理学会ジュニア会員として所属しております。</p>
                             <div></div>
-                            <h4>大学生として</h4>
-                            <p>基幹理工学部情報理工学科、教職課程についても履修中</p>
-                            <h4>業務として</h4>
+                            <h4>教育者として</h4>
+                            <p>プログラミング教育（高等学校にてTAとして）従事、教職課程についても履修中</p>
+                            <h4>システムエンジニアとして</h4>
                             <p>複数の企業にて、開発・情報教育に従事しております。</p>
                         </div>
                     </div>
